--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 .container{
 	position:relative;
 	height:650px;
+	
 }
-/*body{
-	height:1800px;
-}*/
+
 
 .p-relative{
 	position:relative;
@@ -12,27 +11,46 @@
 .p-absolute{
 	position:absolute;
 }
+.yard{
+	position:absolute;
+	width:100%;
+	height:650px;
+}
+.logo{
+	position:absolute;
+	top:0;
+	right:0;
+	width:200px;
+	z-index:3;
+}
 .tom{
 	position:absolute;
 	bottom:0;
 	right:0;
 	animation:tom-anim 2s infinite ;
 }
-.section{
-	background-color:green;
-}
+
 .jerry{
 	position:absolute;
+	width:300px;
 	bottom:15px;
 	left:650px;
-	animation:jerry-anim 1s infinite 0.3s;
+	animation:jerry-anim 2s infinite ;
+	
 }
+
 
 @keyframes tom-anim {
     from {right: 0px;}
-    to {right: 950px;}
+    to {right: 980px;}
     
   }
+  @keyframes jerry-anim {
+    from {left:  0px;}
+    to {left:  980px;}
+    
+  }
+
 
 
 
